--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,33 +1,41 @@
 # app/Dockerfile
 
-# Use uma imagem base oficial do Python
-FROM python:3.11-slim
+# Usar o Ubuntu 22.04 como imagem base
+FROM ubuntu:22.04
 
-# Defina o diretório de trabalho dentro do contêiner
+# Definir o diretório de trabalho
 WORKDIR /app
 
-# Instale dependências do sistema necessárias
+# Definir variáveis de ambiente para evitar prompts interativos
+ENV DEBIAN_FRONTEND=noninteractive
+
+# Instalar as dependências do sistema
 RUN apt-get update && apt-get install -y \
+    python3 \
+    python3-pip \
+    netcat \
     build-essential \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copie o arquivo de dependências para o contêiner
+# Copiar os arquivos de requisitos
 COPY requirements.txt .
 
-# Instale as dependências Python
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# Instalar as dependências Python
+RUN pip3 install --upgrade pip
+RUN pip3 install --no-cache-dir -r requirements.txt
 
-# Copie todo o conteúdo do diretório app para o contêiner
+# Copiar o restante do código, incluindo run.py agora dentro de app/
 COPY . .
 
-# Exponha a porta que a aplicação irá rodar
-EXPOSE 8080
+# Dar permissão de execução ao script de entrada
+RUN chmod +x /app/entrypoint.sh
 
-# Defina as variáveis de ambiente necessárias
-ENV FLASK_APP=app.py
-ENV FLASK_RUN_HOST=0.0.0.0
-ENV FLASK_RUN_PORT=8080
+# Expor a porta que a aplicação irá rodar
+EXPOSE 5000
 
-# Comando para rodar a aplicação
-CMD ["flask", "run"]
+# Definir o entrypoint
+ENTRYPOINT ["/app/entrypoint.sh"]
+
+# Comando para iniciar a aplicação
+CMD ["flask", "run", "--host=0.0.0.0", "--port=5000"]
