--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - DATABASE_URL=${DATABASE_URL:-postgresql://projeto:projeto@db:5432/projeto}
+      - DATABASE_URL=postgresql://projeto:projeto@db:5432/projeto
       - JWT_SECRET_KEY=${JWT_SECRET_KEY:-projeto}
       - FLASK_APP=run.py  # Agora está dentro de app/
     depends_on:
@@ -12,20 +12,10 @@ services:
         condition: service_started
 
   db:
-    image: postgres:15
+    image: postgres:17
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-projeto}
       POSTGRES_USER: ${POSTGRES_USER:-projeto}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-projeto}
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
+    restart: always
 
-volumes:
-  pgdata:
